@@ -1,0 +1,109 @@
+<refentry xmlns="http://docbook.org/ns/docbook" version="5.0" xml:id="brlman1">
+
+  <refmeta>
+    <refentrytitle>BRLMAN</refentrytitle>
+    <manvolnum>1</manvolnum>
+    <refmiscinfo class="source">BRL-CAD</refmiscinfo>
+    <refmiscinfo class="manual">BRL-CAD User Commands</refmiscinfo>
+  </refmeta>
+
+  <refnamediv xml:id="name">
+    <refname>brlman</refname>
+    <refpurpose>
+      a manual page viewer for BRL-CAD
+    </refpurpose>
+  </refnamediv>
+
+  <!-- body begins here -->
+  <refsynopsisdiv xml:id="synopsis">
+    <cmdsynopsis sepchar=" ">
+      <command>brlman</command>
+      <arg choice="opt" rep="repeat"><replaceable>options</replaceable></arg>
+      <arg choice="opt"><replaceable>manpage</replaceable></arg>
+    </cmdsynopsis>
+  </refsynopsisdiv>
+
+  <refsection xml:id="description"><title>DESCRIPTION</title>
+
+    <para>
+      <command>brlman</command> provides manual page viewing capabilities for
+      BRL-CAD's programs, commands, libraries, and conventions (such as file
+      formats and attribute standards.)  On Unix-type systems, its default
+      behavior is to wrap the system <command>man</command> command with the appropriate path
+      information to allow man to find and display BRL-CAD's man pages.  On
+      systems without a <command>man</command> command, <command>brlman</command>
+      will instead launch a Tcl/Tk based graphical view that displays html
+      versions of the manual pages.  Both versions are generated from the same
+      DocBook source files and contain the same information.
+    </para>
+
+  </refsection>
+
+  <refsection xml:id="brlman_options"><title>OPTIONS</title>
+
+    <variablelist remap="TP">
+      <varlistentry>
+	<term><emphasis remap="B" role="bold">-h</emphasis></term>
+	<listitem>
+	  <para>
+	    Prints help.
+	  </para>
+	</listitem>
+      </varlistentry>
+      <varlistentry>
+	<term><emphasis remap="B" role="bold">-g</emphasis></term>
+	<listitem>
+	  <para>
+	    Instructs <command>brlman</command> to use its graphical man page viewer.
+	  </para>
+	</listitem>
+      </varlistentry>
+
+      <varlistentry>
+	<term><emphasis remap="B" role="bold">-L</emphasis></term>
+	<listitem>
+	  <para>
+	    Specify a language to use when selecting man pages.
+	  </para>
+	</listitem>
+      </varlistentry>
+      <varlistentry>
+	<term><emphasis remap="B" role="bold">-S [1 3 5 n]</emphasis></term>
+	<listitem>
+	  <para>
+	    Specify a particular section to use when searching for a man page.  Useful when there are programs and MGED commands with the same names - the default man page returned will be that of the program, so <option>-S</option> can be used to specify the MGED page instead.  Allowed sections are 1 (programs), 3 (libraries), 5 (conventions), and n (MGED).
+	  </para>
+	</listitem>
+      </varlistentry>
+      <varlistentry>
+	<term><emphasis remap="B" role="bold">--no-gui</emphasis></term>
+	<listitem>
+	  <para>
+	    Instructs <command>brlman</command> <emphasis>not</emphasis> to use its graphical man page viewer, even in situations where there is no command line option.  Primarily useful in scripting situations.
+	  </para>
+	</listitem>
+      </varlistentry>
+    </variablelist>
+
+  </refsection>
+
+  <refsection xml:id="author"><title>AUTHOR</title>
+    <para>Clifford Yapp</para>
+  </refsection>
+
+  <refsection xml:id="copyright"><title>COPYRIGHT</title>
+    <para>
+      This software is Copyright (c) 2016 United States Government as
+      represented by the U.S. Army Rebrlman Laboratory.
+    </para>
+  </refsection>
+
+  <refsection xml:id="bug_reports"><title>BUG REPORTS</title>
+    <para>
+      Reports of bugs or problems should be submitted via electronic
+      mail to &lt;devs@brlcad.org&gt;, or via the "cadbug.sh" script.
+    </para>
+  </refsection>
+</refentry>
+
+<!-- vim: set shiftwidth=2 : -->
