@@ -1,0 +1,51 @@
+<refentry xmlns="http://docbook.org/ns/docbook" version="5.0" xml:id="man_MGED">
+
+  <refmeta>
+    <refentrytitle>MAN</refentrytitle>
+    <manvolnum>nged</manvolnum>
+    <refmiscinfo class="source">BRL-CAD</refmiscinfo>
+    <refmiscinfo class="manual">BRL-CAD MGED Commands</refmiscinfo>
+  </refmeta>
+
+  <refnamediv xml:id="name">
+    <refname>man</refname>
+    <refpurpose>View manual pages.</refpurpose>
+  </refnamediv>
+
+  <refsynopsisdiv xml:id="synopsis">
+    <cmdsynopsis sepchar=" ">
+      <command>man</command>
+      <arg choice="req" rep="norepeat"><replaceable>cmdname</replaceable></arg>
+    </cmdsynopsis>
+  </refsynopsisdiv>
+
+  <refsection xml:id="description"><title>DESCRIPTION</title>
+
+  <para>
+    Launches the <command>brlman</command> graphical man page viewer with
+    the man page documenting the specified MGED command name.
+  </para>
+  </refsection>
+
+  <refsection xml:id="author"><title>AUTHOR</title>
+    <para>
+      BRL-CAD Team
+    </para>
+  </refsection>
+
+  <refsection xml:id="copyright"><title>COPYRIGHT</title>
+  <para>
+    This software is Copyright (c) 2016 United States Government as
+    represented by the U.S. Army Rebrlman Laboratory.
+  </para>
+  </refsection>
+
+  <refsection xml:id="bug_reports"><title>BUG REPORTS</title>
+  <para>
+    Reports of bugs or problems should be submitted via electronic
+    mail to &lt;devs@brlcad.org&gt;, or via the "cadbug.sh" script.
+  </para>
+  </refsection>
+</refentry>
+
+<!-- vim: set shiftwidth=2 : -->
